--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">It's basically the strong desire and feeling to repeat some behaviors which can feel pleasurable for some people, also it can relieve some stress too.</p>
+                        <p class="text-white-75 mb-5"> An addictive behavior is the compulsive use of substances and activities ( like sex and gambling ), without the problem of the negative consequences that it can have, these can be physical and/or mentally, but people used it to “complete their need, or to fight pain temporally”.
+</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
@@ -55,7 +56,8 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Main Causes</h2>
                         <hr class="divider divider-light" />
-			<p class="text-white-75 mb-4">This happens because the people that discover a different type of pleasure just can get enough of it, and make it part of their routine. <br><br> It can be similar to when someone gets a dopamine rush, or also adrenaline, which are substances that can be easily obtained with certain substances.</p>
+			<p class="text-white-75 mb-4">Mainly, the causes of this types of problems comes from exposure to addictive substances, social pressure, and a being easily manipulated, and if you already have use some of this substances, you may develop an extremely addictive need to use them.
+</p>
                     </div>
                 </div>
             </div>
@@ -65,7 +67,7 @@
             <div class="container px-4 px-lg-5">
                 <h2 class="text-center mt-0">Help</h2>
                 <hr class="divider" />
-                <p class="text-black-75 mb-4">For trying to stop with this addiction you can always seek for help, or even search on the internet for methods and see which one is the best for you.</p>
+                <p class="text-black-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help.</p>
                 </div>
         </section>
         
