--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
+		<div class="col-lg-8 text-center">
                 <h2 class="text-center mt-0">Help</h2>
                 <hr class="divider" />
-                <p class="text-black-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help.</p>
-                </div>
+                <p class="text-black-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help, share this webpage so that people get informed upon this disorder, and get the message to spread so people don't get confused when presented with this addiction.</p>
+		</div>
+	    </div>
         </section>
         
         <!-- Call to action-->
