--- a/index.html
+++ b/index.html
@@ -63,23 +63,21 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section bg-primary" id="about">
             <div class="container px-4 px-lg-5">
-		<div class="col-lg-8 text-center">
-                <h2 class="text-center mt-0">Help</h2>
-                <hr class="divider" />
-                <p class="text-black-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help, share this webpage so that people get informed upon this disorder, and get the message to spread so people don't get confused when presented with this addiction.</p>
-		</div>
-	    </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Main Causes</h2>
+                        <hr class="divider divider-light" />
+			<p class="text-white-75 mb-4">Mainly, the causes of this types of problems comes from exposure to addictive substances, social pressure, and a being easily manipulated, and if you already have use some of this substances, you may develop an extremely addictive need to use them.
+</p>
+                    </div>
+                </div>
+            </div>
         </section>
         
         <!-- Call to action-->
-        <section class="page-section bg-dark text-white" id="portfolio">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">To get more information</h2>
-                <a class="btn btn-light btn-xl" href="https://www.addictioncenter.com/addiction/behavioral-addictions/">Click Here</a>
-            </div>
-        </section>
+        
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Behavioral addictions. Addiction Center. (2022, August 9). Retrieved August 30, 2022, from https://www.addictioncenter.com/addiction/behavioral-addictions/</div></div>
