--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Main Causes</h2>
                         <hr class="divider divider-light" />
-			<p class="text-white-75 mb-4">Mainly, the causes of this types of problems comes from exposure to addictive substances, social pressure, and a being easily manipulated, and if you already have use some of this substances, you may develop an extremely addictive need to use them.
+			<p class="text-white-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help, share this webpage so that people get informed upon this disorder, and get the message to spread so people don't get confused when presented with this addiction.
 </p>
                     </div>
                 </div>
