--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section bg-primary" id="about">
+        <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Main Causes</h2>
+                        <h2 class="text-black mt-0">Help</h2>
                         <hr class="divider divider-light" />
-			<p class="text-white-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help, share this webpage so that people get informed upon this disorder, and get the message to spread so people don't get confused when presented with this addiction.
+			<p class="text-black-75 mb-4">If you feel that you have this sorts of problems, you always can search online what can you do for trying to stop, or even talk to your friends and family about it for trying to stop it, there is always someone ready to help, share this webpage so that people get informed upon this disorder, and get the message to spread so people don't get confused when presented with this addiction.
 </p>
                     </div>
                 </div>
