--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
         </section>
         
         <!-- Call to action-->
-        
+        <section class="page-section bg-dark text-white" id="portfolio">
+            <div class="container px-4 px-lg-5 text-center">
+                <h2 class="mb-4">To get more information</h2>
+                <a class="btn btn-light btn-xl" href="https://www.addictioncenter.com/addiction/behavioral-addictions/">Click Here</a>
+            </div>
+        </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Behavioral addictions. Addiction Center. (2022, August 9). Retrieved August 30, 2022, from https://www.addictioncenter.com/addiction/behavioral-addictions/</div></div>
