--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section bg-dark" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -95,7 +95,7 @@
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">To get more information</h2>
-                <a class="btn btn-light btn-xl" href="https://www.addictioncenter.com/addiction/behavioral-addictions/">Click Here</a>
+                <a class="btn btn-light btn-xl" href="https://www.medicalnewstoday.com/articles/what-do-we-know-about-microplastics-in-food">Click Here</a>
             </div>
         </section>
         <!-- Footer-->
