--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
                 </div>
             </div>
         </section>
+	    
+	    <section class="page-section" id="">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-black mt-0">Some possible solutions are:</h2>
+			    <ul>
+				    <li>Limit highly processed foods</li>
+				    <li>Choose eco-friendly packaging</li>
+				    <li>Use glass or stainless steel water bottles</li>
+			    	    <li>Only Use Packaging for Transport and Short-Term Storing</li>
+				    <li>Avoid Reheating Food Packaging</li>
+			    </ul>
+		</div>
+                </div>
+            </div>
+        </section>
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container px-4 px-lg-5 text-center">
