--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section bg-dark" id="services">
+        <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -77,7 +77,7 @@
             </div>
         </section>
         
-	<section class="page-section" id="">
+	<section class="page-section bg-dark text-white" id="">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
