--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-black mt-0">Dangers in microplastics</h2>
+                        <h2 class="mt-0">Dangers in microplastics</h2>
 			    <p class="text-black-75 mb-4">Even though we aren’t able to see it ,microplastics are causing serious problems to all of us since they are  small pieces of stabilizers, lubricants, fillers, plasticizers, and other manufacturers which have a big durability, they are toxic to the human body  and really harmful like: Disrupting hormones, increment of chronic diseases, impairing immune health, etc.</p>
                     <hr class="divider divider-light" />
-                        <h2 class="text-black mt-0">How much are we usually exposed to?</h2>
+                        <h2 class="mt-0">How much are we usually exposed to?</h2>
 			    <p class="text-black-75 mb-4">Research suggests that an average person in the United States may consume over 50,000 particles of microplastics from food alone per year. This figure increases to an estimated 90,000 in those who regularly consume plastic-based bottled water, and to 120,000 when considering the inhalation of microplastics from non-food sources.”(PubMed central, 2019)</p>
                     
 		</div>
@@ -108,6 +108,7 @@
                 </div>
             </div>
         </section>
+	   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfizQeSSPf0-iLmgLzr0K2vls2Uy8opUsx99CgvLStgMw-yQQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container px-4 px-lg-5 text-center">
