--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-	   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfizQeSSPf0-iLmgLzr0K2vls2Uy8opUsx99CgvLStgMw-yQQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+	   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfizQeSSPf0-iLmgLzr0K2vls2Uy8opUsx99CgvLStgMw-yQQ/viewform?embedded=true" width="100%" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container px-4 px-lg-5 text-center">
