--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">Causes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Help</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">More</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#solutions">Solutions</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#more">More</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,7 +61,7 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
