--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </section>
 	    
-	    <section class="page-section" id="">
+	    <section class="page-section" id="solutions">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -110,7 +110,7 @@
         </section>
 	   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfizQeSSPf0-iLmgLzr0K2vls2Uy8opUsx99CgvLStgMw-yQQ/viewform?embedded=true" width="100%" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- Call to action-->
-        <section class="page-section bg-dark text-white" id="portfolio">
+        <section class="page-section bg-dark text-white" id="more">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">To get more information</h2>
                 <a class="btn btn-light btn-xl" href="https://www.medicalnewstoday.com/articles/what-do-we-know-about-microplastics-in-food">Click Here</a>
