--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">
-“Microplastics in food.” Food Standards, February 2019, https://www.foodstandards.gov.au/consumer/generalissues/Pages/Microplastics-in-food-.aspx#:~:text=Microplastics%20are%20eaten%20by%20fish,can%20enter%20oux. Accessed 30 October 2022.
-
-“Food Contamination.” ScienceDirect, https://www.sciencedirect.com/topics/agricultural-and-biological-sciences/foo -contamination. Haverfield, Charles. “4 Ways to Reduce Microplastic Contamination from Food Packaging.” Flexible Packaging, 4 April 2022,
+“Microplastics in food.” Food Standards, February 2019, https://www.foodstandards.gov.au/consumer/generalissues/Pages/Microplastics-in-food-.aspx#:~:text=Microplastics%20are%20eaten%20by%20fish,can%20enter%20oux. Accessed 30 October 2022.<br>
+“Food Contamination.” ScienceDirect, https://www.sciencedirect.com/topics/agricultural-and-biological-sciences/foo -contamination. Haverfield, Charles. “4 Ways to Reduce Microplastic Contamination from Food Packaging.” Flexible Packaging, 4 April 2022,<br>
 https://www.flexpackmag.com/articles/91956-how-to-reduce-microplastic-contamina on-from-food-packaging. Accessed 30 October 2022. “Microplastics in food.”.
 
 </div></div>
